[package]
name = "relon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command line interface for the Relon language"
keywords = ["cli", "config", "dsl", "json", "sandboxed"]
categories = ["command-line-utilities", "config"]

[dependencies]
# v5-β-2 stage 4: the CLI uses the cranelift-aot backend for
# `--backend cranelift-aot` (and as the default `--backend auto`'s
# run_main path). The facade's `cranelift-aot` feature is default-on
# so we don't have to enable it explicitly here.
relon = { workspace = true, features = ["cranelift-aot"] }
relon-parser = { workspace = true }
relon-evaluator = { workspace = true }
relon-eval-api = { workspace = true }
relon-analyzer = { workspace = true }
relon-codegen-native = { workspace = true }
relon-bytecode = { workspace = true }
relon-fmt = { workspace = true }
relon-lsp = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
miette = { workspace = true, features = ["derive", "fancy"] }
ariadne = "0.6.0"
