[package]
name = "relon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command line interface for the Relon language"
keywords = ["cli", "config", "dsl", "json", "sandboxed"]
categories = ["command-line-utilities", "config"]

[dependencies]
# v5-β-2 stage 4: the CLI uses the cranelift-aot backend for
# `--backend cranelift-aot` (and as the default `--backend auto`'s
# run_main path). The facade's `cranelift-aot` feature is default-on
# so we don't have to enable it explicitly here.
relon = { workspace = true, features = ["cranelift-aot"] }
relon-parser = { workspace = true }
relon-evaluator = { workspace = true }
relon-eval-api = { workspace = true }
relon-analyzer = { workspace = true }
relon-codegen-native = { workspace = true }
relon-bytecode = { workspace = true }
relon-fmt = { workspace = true }
relon-lsp = { workspace = true }
# v6-fix-D2-J cold-start: disable the `default` feature on clap so we
# opt out of `color` / `suggestions` / `wrap_help` for the CLI binary.
# `derive` + `std` + `help` cover the parser surface we actually use
# (`#[derive(Parser, Subcommand, ValueEnum)]`, the `--help` /
# `--version` envelope); the dropped features bring their own
# unicode tables + levenshtein scoring, which inflate the ELF text
# section without paying their way in the trivial-`#main` cold start.
# Add explicit features back here if a downstream `relon` subcommand
# starts depending on suggestions / colored errors.
clap = { workspace = true, default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
miette = { workspace = true, features = ["derive", "fancy"] }
