[package]
name = "relon-codegen-llvm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "LLVM-backed AOT evaluator for Relon (Phase A bootstrap)"
keywords = ["relon", "llvm", "codegen", "compiler", "aot"]
categories = ["compilers"]

# Phase A bootstrap: keep the dep surface narrow on purpose. We mirror
# the IR shape `relon-codegen-cranelift` consumes so a side-by-side
# comparison of the two AOT backends shares the same IR contract.
# Schema layout / sandbox vtable / object cache wiring stay in the
# cranelift crate for now — they'll move down once Phase B widens the
# LLVM emitter past the legacy-i64 envelope.
[dependencies]
# Leaf util: shared `align_up` arena-layout helper.
relon-util = { workspace = true }
# IR input
relon-ir = { workspace = true }
# Trait Evaluator + shared value types + RuntimeError surface
relon-eval-api = { workspace = true }
relon-abi = { workspace = true }
# Source positions for diagnostics
relon-parser = { workspace = true }
# `from_source` runs the per-file analyzer before lowering so the
# codegen path matches what the tree-walker does. Mirrors how
# `relon-codegen-cranelift` wires the analyzer at its `from_source` site.
relon-analyzer = { workspace = true }

thiserror = { workspace = true }

# AOT-1: f64 return-value decode constructs `Value::Float(OrderedFloat(..))`.
# Pinned by the workspace (also used by relon-ir / relon-eval-api).
ordered-float = { workspace = true }

# Phase A.1 decision: inkwell 0.9.0 with `llvm18-1` feature.
# - llvm-sys 181.3.0 pulled in transitively; pinned by inkwell's
#   feature flag so the workspace lock stays deterministic.
# - Matches the system-installed LLVM 18.1.3 (`/usr/lib/llvm-18`).
# - `default-features = false` drops the `target-all` umbrella (all
#   18 architectures) so cold builds don't link every backend; we
#   reinstate just the host x86 backend below.
#   `target-webassembly` (P3 / S3.X): reinstate the wasm32 backend so
#   the SAME relon-IR → LLVM-IR emitter can retarget to `wasm32-wasi`
#   and emit a `\0asm` object. The native x86 path is unaffected; the
#   wasm backend is only reached when `emit_object*` is called with
#   `Target::Wasm32`.
inkwell = { version = "=0.9.0", default-features = false, features = ["llvm18-1", "target-x86", "target-webassembly"] }

# Phase L codegen-quality: MCJIT custom memory manager needs raw mmap
# control so we can place code with `CodeModel::Small`. The default
# MCJIT JIT compiler builder hard-wires `CodeModel::JITDefault`
# (effectively Large), forcing every recursive call to indirect through
# a `movabsq + callq *%reg` shape — a fixed per-call BTB+decoder hit
# that visibly widens the W7 fib lambda's gap vs the equivalent rustc
# LTO build. `libc::mmap` is the smallest cross-platform call that
# exposes `MAP_FIXED` + `PROT_*` so we can land code in the lower 2 GB
# (or just emit RWX pages without MAP_32BIT — internal-only modules
# satisfy ±2 GB relocations as long as the section block is contiguous).
libc = "0.2"

[dev-dependencies]
# Phase A.4 perf smoke needs a side-by-side cranelift evaluator built
# from the same hand-built IR fixture. The dep is dev-only so the
# crate's production build does not pull in the cranelift backend.
relon-codegen-cranelift = { workspace = true }
# AOT-1 differential oracle: the f64 arithmetic tests cross-check the
# LLVM JIT output against the tree-walking interpreter bit-for-bit.
relon-evaluator = { workspace = true }
# S3.X wasm32 retarget: `tests/aot_wasm.rs` runs the LLVM→wasm32 object
# (linked with `wasm-ld`) inside wasmtime and differentials the result
# against the native `emit_object` / `run_main` oracle. Dev-only so the
# production codegen crate does not pull in the wasm runtime.
wasmtime = "45"
# §8 follow-up (standard-WASI spike): `tests/aot_wasm_std_wasi.rs` proves a
# relon-emitted wasm module can import the STANDARD
# `wasi_snapshot_preview1::clock_time_get` symbol and be satisfied by the
# off-the-shelf `wasmtime-wasi` preview1 host (`p1::add_to_linker_sync` +
# `WasiP1Ctx`) — NOT a relon-custom `Linker::func_wrap` env import. Dev-only,
# pinned to the same major as `wasmtime` so the two share a runtime.
wasmtime-wasi = "45"
# S6 four-way in-place return gate: `tests/inplace_return_four_way.rs`
# fuzzes random `List<List>` / `List<String>` / `List<Schema>` values
# through the LLVM→wasm32→wasmtime pipeline against the tree-walk oracle.
proptest = { workspace = true }
