[package]
name = "relon-codegen-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lower Relon IR to native machine code via Cranelift (v5-beta-1 AOT backend)"
keywords = ["relon", "cranelift", "codegen", "compiler", "jit"]
categories = ["compilers"]

[dependencies]
# IR input
relon-ir = { workspace = true }
# Trait Evaluator + shared value types + RuntimeError surface
relon-eval-api = { workspace = true }
# Source positions for diagnostics
relon-parser = { workspace = true }
# `from_source` runs the per-file analyzer before lowering so the
# codegen path matches what the tree-walker does. The retired
# wasm-AOT crate (`relon-codegen-wasm`, removed in v5-β-2 stage 4)
# used to wire the analyzer the same way; this is the only AOT path
# left.
relon-analyzer = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
ordered-float = { workspace = true }

# Cranelift v0.131 — matched to the wasmtime-internal-cranelift the
# wasm-AOT backend pulls in so the workspace shares one ISLE backend
# tree and avoids dual-instantiation of the same compiler.
cranelift-codegen = "0.131"
cranelift-frontend = "0.131"
cranelift-module = "0.131"
cranelift-jit = "0.131"
cranelift-native = "0.131"
target-lexicon = "0.13"

# Stage 5 Phase C.3: SIGSEGV / SIGFPE / SIGILL signal handler. We
# install a process-wide handler once via `OnceLock`; the handler
# records the trap code into a thread-local slot so the host-side
# trampoline lifts the signal into a typed `RuntimeError`. The full
# `sigsetjmp` / `siglongjmp` round trip stays deferred because libc
# doesn't expose `sigsetjmp` directly (it's a macro on glibc); the
# current `catch_unwind` path is functionally equivalent for the
# guards we emit (cond_trap + sentinel return, not a native trap),
# and signal-hook adds defense-in-depth for genuine memory-safety
# bugs in the JIT-emitted code. Linux/macOS targets only — the
# wasm32 build re-routes through tree-walk and doesn't need it.
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
# `register_signal_unchecked` is on the registry crate; we use it to
# install handlers for SIGSEGV / SIGFPE / SIGILL which signal-hook
# marks as "forbidden" by default. See `trap_handler.rs` for the
# justification.
signal-hook-registry = "1.4"
libc = "0.2"

[dev-dependencies]
relon-evaluator = { workspace = true }
