[package]
name = "relon-codegen-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lower Relon IR to native machine code via Cranelift (v5-beta-1 AOT backend)"
keywords = ["relon", "cranelift", "codegen", "compiler", "jit"]
categories = ["compilers"]

[dependencies]
# IR input
relon-ir = { workspace = true }
# Trait Evaluator + shared value types + RuntimeError surface
relon-eval-api = { workspace = true }
# Source positions for diagnostics
relon-parser = { workspace = true }
# `from_source` runs the per-file analyzer before lowering so the
# codegen path matches what the tree-walker does. The retired
# wasm-AOT crate (`relon-codegen-wasm`, removed in v5-β-2 stage 4)
# used to wire the analyzer the same way; this is the only AOT path
# left.
relon-analyzer = { workspace = true }
# Shared trace JIT ABI types. v6-γ M2/M3: codegen-native now injects
# HotCounter prologues at every cranelift entry function and the
# `trace_install` module drives the
# `recorder → optimizer → emitter → JIT install` pipeline. See
# `docs/internal/v6-gamma-integration-plan-2026-05-18.md` §3 + §4.
relon-trace-abi = { workspace = true }
# v6-γ M2/M3: recorder + optimizer + emitter pulled in so the trace
# install pipeline can be driven entirely from the codegen-native
# layer. Each crate keeps its own test surface; the integration tests
# live under `tests/trace_jit_smoke.rs`.
relon-trace-jit = { workspace = true }
relon-trace-recorder = { workspace = true }
relon-trace-emitter = { workspace = true }
# v6-δ M2-B phase 4c: the cranelift backend hosts the
# `BytecodeHotTrigger` adapter that wires the bytecode VM's
# hot-counter prologue into the same `__relon_jump_to_recorder`
# helper the cranelift entry-fn prologue uses. The dep is one-way
# (codegen-native → bytecode); the bytecode crate itself stays
# cranelift-free so the wasm32 build still compiles.
relon-bytecode = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
ordered-float = { workspace = true }

# Cranelift v0.131 — matched to the wasmtime-internal-cranelift the
# wasm-AOT backend pulls in so the workspace shares one ISLE backend
# tree and avoids dual-instantiation of the same compiler.
cranelift-codegen = "0.132"
cranelift-frontend = "0.132"
cranelift-module = "0.132"
cranelift-jit = "0.132"
cranelift-native = "0.132"
# v5-γ: cranelift-object emits relocatable `.o` bytes parallel to the
# JIT path so the host can persist a cache artefact + dlopen it on
# subsequent cold starts. Same 0.131 channel the other cranelift
# crates pin so the workspace shares one ISLE backend tree.
cranelift-object = "0.132"
target-lexicon = "0.13"

# v5-γ: persist `.o` bytes (after ET_REL -> ET_DYN link) to disk and
# load them back via memfd + dlopen on subsequent cold starts.
relon-object-cache = { workspace = true }
# v5-γ: ET_REL -> ET_DYN link pass between cranelift-object's emit
# and the cache store.
relon-object-link = { workspace = true }

# v5-γ: structured logging at warn / info / debug levels around the
# cache best-effort write and load paths so operators see exactly
# why a fallback fired (ld missing, hmac key unreadable, blob
# corrupt, etc.).
tracing = "0.1"
# P2-12: ArcSwap-backed trace registry → lock-free reads on the
# trace dispatch hot path.
arc-swap = { workspace = true }

# Stage 5 Phase C.3: libc signal constants are used only to map
# platform signal numbers to Relon trap kinds for diagnostics. Relon
# does not install a Rust process-wide signal handler; typed traps are
# delivered through structured sandbox state instead.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
relon-evaluator = { workspace = true }
# v5-γ object-cache integration tests need isolated cache dirs so
# concurrent cargo-test threads do not stomp on each other.
tempfile = "3"
# Tests inspect the relon-object-cache file path / HMAC envelope
# directly so a tamper-detection assertion can prove the file got
# unlinked. dev-dep only — production code does not touch the
# object-cache crate's internal storage module.
relon-object-cache = { workspace = true }
