[package]
name = "relon-codegen-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lower Relon IR to WebAssembly bytecode (AOT backend for the Evaluator trait)"
keywords = ["relon", "wasm", "codegen", "compiler"]
categories = ["compilers", "wasm"]

[dependencies]
# IR input
relon-ir = { workspace = true }
# Trait Evaluator + shared value types
relon-eval-api = { workspace = true }
# Source positions for srcmap custom section
relon-parser = { workspace = true }

thiserror = { workspace = true }
# Canonical-signature hashing for `#native` host imports. Same crate
# already used by relon-eval-api so we share one dependency version
# across the workspace.
sha2 = { workspace = true }

# Low-level WebAssembly module encoder used by the Phase 1.alpha
# hardcoded smoke generator. Kept in sync with `wasmparser` /
# `wasmtime` versions below so the binary they exchange shares the
# same spec proposals.
wasm-encoder = "0.249"
# Used by `compile_module` to re-scan the emitted code section and
# compute module-absolute byte offsets per instruction (Phase 1.gamma
# srcmap emit). Pinned to the same minor as `wasm-encoder` so both
# crates agree on which spec proposals are in scope.
wasmparser = "0.249"
# Phase 7: `WasmModule::translate_trap` consumes a `wasmtime::Error`
# to surface backend-specific `RuntimeError` variants. Promoted from
# dev-dep to main dep because hosts that hold a `WasmModule` value
# need the same `wasmtime::Trap` type definition the codegen
# crate's public surface references. Default features keep the
# cranelift+runtime combo in scope so production and tests share
# one trap shape.
wasmtime = "44"

[dev-dependencies]
# Source -> AnalyzedTree pipeline driving the Phase 1.beta /
# Phase 2.b end-to-end test.
relon-analyzer = { workspace = true }
