[package]
name = "relon-codegen-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lower Relon IR to WebAssembly bytecode (AOT backend for the Evaluator trait)"
keywords = ["relon", "wasm", "codegen", "compiler"]
categories = ["compilers", "wasm"]

[dependencies]
# IR input
relon-ir = { workspace = true }
# Trait Evaluator + shared value types
relon-eval-api = { workspace = true }
# Source positions for srcmap custom section
relon-parser = { workspace = true }
# Phase 8: `WasmAotEvaluator::from_source` runs the per-file analyzer
# before lowering so the codegen path matches what the tree-walker
# does. Workspace mode (multi-file `#import`) remains a Phase 9 goal;
# the single-file form needs only `relon_analyzer::analyze`.
relon-analyzer = { workspace = true }
# Phase 8: `Value`-side construction from `BufferReader` output and
# the `serde_json` interop for argument bridging both live in the
# evaluator module.
ordered-float = { workspace = true }

thiserror = { workspace = true }
# Canonical-signature hashing for `#native` host imports. Same crate
# already used by relon-eval-api so we share one dependency version
# across the workspace.
sha2 = { workspace = true }
# Phase 9.b-3: AOT cache schemas sidecar uses serde_json so the
# rehydration path can pull back `Schema` / `TypeRepr` values without
# hand-rolling a binary format.
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Low-level WebAssembly module encoder used by the Phase 1.alpha
# hardcoded smoke generator. Kept in sync with `wasmparser` /
# `wasmtime` versions below so the binary they exchange shares the
# same spec proposals.
wasm-encoder = "0.249"
# Used by `compile_module` to re-scan the emitted code section and
# compute module-absolute byte offsets per instruction (Phase 1.gamma
# srcmap emit). Pinned to the same minor as `wasm-encoder` so both
# crates agree on which spec proposals are in scope.
wasmparser = "0.249"
# Phase 7: `WasmModule::translate_trap` consumes a `wasmtime::Error`
# to surface backend-specific `RuntimeError` variants. Promoted from
# dev-dep to main dep because hosts that hold a `WasmModule` value
# need the same `wasmtime::Trap` type definition the codegen
# crate's public surface references. Default features keep the
# cranelift+runtime combo in scope so production and tests share
# one trap shape.
wasmtime = "44"

[dev-dependencies]
# Phase 8 parity smoke tests pit the wasm-AOT backend against the
# tree-walker, so we pull the tree-walker in as a dev-dep. Production
# users keep the dependency at zero because the parity check only
# runs under `cargo test`.
relon-evaluator = { workspace = true }
