[package]
name = "relon-codegen-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Phase Z lowering: Relon IR -> WebAssembly MVP 1.0 bytes (canonical lowered form)."
keywords = ["wasm", "codegen", "relon"]
categories = ["compilers", "wasm"]
publish = false

[dependencies]
relon-ir = { workspace = true }
relon-eval-api = { workspace = true }
wasm-encoder = "0.244"
thiserror = { workspace = true }

[dev-dependencies]
# Round-trip validate the emitted modules. Pinned to the same family
# wasm-encoder declares to avoid binary-format drift between encode and
# parse paths.
wasmparser = "0.244"
