[package]
name = "relon-evaluator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The evaluation engine for the Relon language"
keywords = ["evaluator", "interpreter", "sandboxed", "dsl", "config"]
categories = ["compilers", "config"]

[dependencies]
relon-parser = { workspace = true }
relon-analyzer = { workspace = true }
relon-eval-api = { workspace = true }
ordered-float.workspace = true
# `rc` enables `serde::Serialize`/`Deserialize` for `Arc<T>` so that
# `Value::List(Arc<Vec<Value>>)` and `Value::Dict(Arc<ValueDict>)` can
# auto-derive the trait. Removing it requires hand-rolled impls — keep
# the feature on as long as Value carries Arc'd payloads.
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true, features = ["derive"] }

# v3+ a-3: HTTPS fetch for remote `#import "https://..."` modules.
# Restricted to native hosts so the browser playground build of
# `relon-wasm` (which depends on this crate) keeps compiling against
# `wasm32-unknown-unknown` without dragging in native sockets / TLS.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
# `relon-fmt` is pulled in only for the fmt round-trip property in
# `tests/property_tests.rs` — formatter ↔ evaluator equivalence is a
# determinism guarantee, but the runtime crate stays formatter-free.
# `relon-fmt`'s own dependency closure (parser only) does not loop back
# through `relon-evaluator`, so this dev-dep is acyclic.
relon-fmt = { workspace = true }
